--- a/templates/partials/flights.html
+++ b/templates/partials/flights.html
@@ -22,36 +22,45 @@
         {% endfor %}
     </div>
     {% comment %} {% for dateitem in slider_date_list %}<div>{{dateitem}}</div>{% endfor %} <div>DATE: {{date}}</div> {% endcomment %}
-    <div id="">
+    <div id="" class="">
         {% for flight in flight_results %}
             <!-- SHOW AVAILABLE FLIGHTS -->
-            <div data-selected-{{ leg }}="False" data-flight-leg="{{ leg }}" class="flex flex-col items-center justify-between w-full my-6 bg-white border-2 drop-shadow-md h-52 sm:h-36 border-primary sm:rounded-full sm:flex-row sm:pl-8 md:pl-16 rounded-3xl overflow-clip" id="{{ flight.flight_number }}">
-                <div class="flex items-center justify-between p-4">
-                    <div>
-                        <div class="text-xs font-semibold md:text-md text-text">{{ flight.origin }}</div>
-                        <div class="text-xl font-bold md:text-4xl text-text">{{ flight.dep_time|time:'H:i' }}</div>
+            <div class="flight-card-container flex mt-6 border-2 rounded-t-[4.5rem] rounded-b-[4.5rem] flex-wrap flex-col">
+                <div data-selected-{{ leg }}="False" data-flight-leg="{{ leg }}" class="flex flex-col items-center justify-between w-full bg-white border-2 flex-0 drop-shadow-md h-52 sm:h-36 border-primary sm:rounded-full sm:flex-row sm:pl-8 md:pl-16 rounded-3xl overflow-clip" id="{{ flight.flight_number }}">
+                    <div class="flex items-center justify-between p-4">
+                        <div>
+                            <div class="text-xs font-semibold md:text-md text-text">{{ flight.origin }}</div>
+                            <div class="text-xl font-bold md:text-4xl text-text">{{ flight.dep_time|time:'H:i' }}</div>
+                        </div>
+                        <div class="mx-8">
+                            <div class="text-sm font-light text-center md:text-md text-text">[Duration]</div>
+                            <img src="{% static 'img/flight-duration-illo.svg' %}"
+                                 alt=""
+                                 width="227px"
+                                 height="27px"
+                                 class="">
+                        </div>
+                        <div>
+                            <div class="text-xs font-semibold md:text-md text-text">{{ flight.destination }}</div>
+                            <div class="text-xl font-bold md:text-4xl text-text">{{ flight.arr_time|time:'H:i' }}</div>
+                        </div>
                     </div>
-                    <div class="mx-8">
-                        <div class="text-sm font-light text-center md:text-md text-text">[Duration]</div>
-                        <img src="{% static 'img/flight-duration-illo.svg' %}"
-                             alt=""
-                             width="227px"
-                             height="27px"
-                             class="">
+                    {% comment %} <div>{{ flight.outbound_date }}</div> {% endcomment %}
+                    <div class="pb-4 text-sm text-center sm:pb-0 sm:pr-4 text-text">
+                        Flight no.
+                        <br class="hidden sm:block">
+                        {{ flight.flight_number }}
                     </div>
-                    <div>
-                        <div class="text-xs font-semibold md:text-md text-text">{{ flight.destination }}</div>
-                        <div class="text-xl font-bold md:text-4xl text-text">{{ flight.arr_time|time:'H:i' }}</div>
+                    <div class="flex items-center justify-center w-full h-full text-3xl font-bold text-white border-white sm:aspect-square sm:w-auto sm:border-2 bg-primary sm:rounded-full">
+                        €{{ flight.price }} <small class="font-normal">pp</small>
                     </div>
                 </div>
-                {% comment %} <div>{{ flight.outbound_date }}</div> {% endcomment %}
-                <div class="pb-4 text-sm text-center sm:pb-0 sm:pr-4 text-text">
-                    Flight no.
-                    <br class="hidden sm:block">
-                    {{ flight.flight_number }}
-                </div>
-                <div class="flex items-center justify-center w-full h-full text-3xl font-bold text-white border-white sm:aspect-square sm:w-auto sm:border-2 bg-primary sm:rounded-full">
-                    €{{ flight.price }} <small class="font-normal">pp</small>
+                <div class="flex flex-grow hidden p-4 border-2 border-red-500 flight-fares">
+                    <div class="grid w-full grid-cols-3 grid-rows-1 gap-4">
+                        <div class="h-full col-span-1 border-2 rounded-xl ">test</div>
+                        <div class="h-full col-span-1 border-2 rounded-xl "></div>
+                        <div class="h-full col-span-1 border-2 rounded-xl "></div>
+                    </div>
                 </div>
             </div>
         {% endfor %}
