--- a/templates/partials/flights.html
+++ b/templates/partials/flights.html
@@ -54,8 +54,9 @@
                     <div class="flex items-center justify-center w-full h-full text-3xl font-bold text-white border-white sm:aspect-square sm:w-auto sm:border-2 bg-primary sm:rounded-full">
                         €{{ flight.price }} <small class="font-normal">pp</small>
                     </div>
-                </div>
-                <div class="flex flex-col flex-grow hidden p-4 md:p-4 lg:p-10 sm:flex-row flight-fares">
+                </div> 
+                <div class="overflow-hidden transition-all duration-500 ease-in-out max-h-0 flight-fares-wrapper">
+                <div class="flex flex-col flex-grow p-4 md:p-4 lg:p-10 sm:flex-row flight-fares">
                     <div class="grid w-full grid-cols-1 grid-rows-3 gap-2 md:grid-cols-3 md:grid-rows-1 md:gap-4 lg:gap-10">
                         <div class="flex flex-col justify-between h-full col-span-1 p-8 text-sm bg-white border-2 shadow-lg rounded-3xl md:text-md">
                             <div>
@@ -131,7 +132,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div></div>
         {% endfor %}
     </div>
 </div>
