--- a/templates/partials/flights.html
+++ b/templates/partials/flights.html
@@ -27,7 +27,7 @@
             <!-- SHOW AVAILABLE FLIGHTS -->
             <div class="flight-card-container flex mt-6 rounded-t-[4.5rem] rounded-b-[4.5rem] flex-wrap flex-col bg-white transition-all duration-500">
                 <!-- FLIGHT DETAILS CARD -->
-                <div data-selected-{{ leg }}="False" data-flight-leg="{{ leg }}" class="flex flex-col items-center justify-between w-full bg-white border-2 flex-0 drop-shadow-md h-52 sm:h-36 border-primary sm:rounded-full sm:flex-row sm:pl-8 md:pl-16 rounded-3xl overflow-clip" id="{{ flight.flight_number }}">
+                <div data-selected-{{ leg }}="False" data-flight-leg="{{ leg }}" class="flex flex-col items-center justify-between w-full bg-white border-2 flight-details-card flex-0 drop-shadow-md h-52 sm:h-36 border-primary sm:rounded-full sm:flex-row sm:pl-8 md:pl-16 rounded-3xl overflow-clip" id="{{ flight.flight_number }}">
                     <div class="flex items-center justify-between p-4">
                         <div>
                             <div class="text-xs font-semibold md:text-md text-text">{{ flight.origin }}</div>
@@ -55,89 +55,90 @@
                     <div class="flex items-center justify-center w-full h-full text-3xl font-bold text-white border-white sm:aspect-square sm:w-auto sm:border-2 bg-primary sm:rounded-full">
                         €{{ flight.price }} <small class="font-normal">pp</small>
                     </div>
-                </div> 
+                </div>
                 <!-- FARES CONTAINER -->
                 <div class="overflow-hidden transition-all duration-500 ease-in-out max-h-0 flight-fares-wrapper">
-                <div class="flex flex-col flex-grow p-4 md:p-4 lg:p-10 sm:flex-row flight-fares">
-                    <div class="grid w-full grid-cols-1 grid-rows-3 gap-2 md:grid-cols-3 md:grid-rows-1 md:gap-4 lg:gap-10">
-                        <!-- STANDARD FARE -->
-                        <div class="flex flex-col justify-between h-full col-span-1 p-8 text-sm bg-white border-2 shadow-lg rounded-3xl md:text-md">
-                            <div>
-                                <p class="mb-4 text-xl font-bold md:mb-6 md:text-3xl text-primary">Standard</p>
-                                <ul class="leading-4">
-                                    <li class="my-4 list-disc list-inside">
-                                        Small carry-on item
-                                        <br>
-                                        <small class="ml-[23px]">40cm x 20cm x 20cm</small>
-                                        <br>
-                                        <small><a href="#"
+                    <div class="flex flex-col flex-grow p-4 md:p-4 lg:p-10 sm:flex-row flight-fares">
+                        <div class="grid w-full grid-cols-1 grid-rows-3 gap-2 md:grid-cols-3 md:grid-rows-1 md:gap-4 lg:gap-10">
+                            <!-- STANDARD FARE -->
+                            <div class="flex flex-col justify-between h-full col-span-1 p-8 text-sm bg-white border-2 shadow-lg rounded-3xl md:text-md">
+                                <div>
+                                    <p class="mb-4 text-xl font-bold md:mb-6 md:text-3xl text-primary">Standard</p>
+                                    <ul class="leading-4">
+                                        <li class="my-4 list-disc list-inside">
+                                            Small carry-on item
+                                            <br>
+                                            <small class="ml-[23px]">40cm x 20cm x 20cm</small>
+                                            <br>
+                                            <small><a href="#"
    class="underline decoration-primary underline-offset-4 text-primary ml-[23px]">See baggage policy</a></small>
-                                    </li>
-                                </ul>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <button data-fare-type="standard" class="p-4 bg-primary rounded-xl">
+                                    <p class="text-2xl font-bold leading-4 text-white">€{{ flight.price }}</p>
+                                    <p class="text-sm font-light text-white">per person</p>
+                                </button>
                             </div>
-                            <button data-fare-type="standard" class="p-4 bg-primary rounded-xl">
-                                <p class="text-2xl font-bold leading-4 text-white">€{{ flight.price }}</p>
-                                <p class="text-sm font-light text-white">per person</p>
-                            </button>
-                        </div>
-                        <!-- PLUS FARE -->
-                        <div class="flex flex-col justify-between h-full col-span-1 p-8 text-sm bg-white border-2 shadow-lg rounded-3xl md:text-md">
-                            <div>
-                                <p class="mb-4 text-xl font-bold md:mb-6 md:text-3xl text-primary">Plus</p>
-                                <ul class="leading-4">
-                                    <li class="my-4 list-disc list-inside">
-                                        Small carry-on item
-                                        <br>
-                                        <small class="ml-[23px]">40cm x 20cm x 20cm</small>
-                                        <br>
-                                        <small><a href="#"
+                            <!-- PLUS FARE -->
+                            <div class="flex flex-col justify-between h-full col-span-1 p-8 text-sm bg-white border-2 shadow-lg rounded-3xl md:text-md">
+                                <div>
+                                    <p class="mb-4 text-xl font-bold md:mb-6 md:text-3xl text-primary">Plus</p>
+                                    <ul class="leading-4">
+                                        <li class="my-4 list-disc list-inside">
+                                            Small carry-on item
+                                            <br>
+                                            <small class="ml-[23px]">40cm x 20cm x 20cm</small>
+                                            <br>
+                                            <small><a href="#"
    class="underline decoration-primary underline-offset-4 text-primary ml-[23px]">See baggage policy</a></small>
-                                    </li>
-                                    <li class="my-4 list-disc list-inside">
-                                        Cabin bag
-                                        <br>
-                                        <small class="ml-[23px]">10kg; 50cm x 40cm x 30cm</small>
-                                        <br>
-                                    </li>
-                                    <li class="my-4 list-disc list-inside">Reserved seat</li>
-                                </ul>
+                                        </li>
+                                        <li class="my-4 list-disc list-inside">
+                                            Cabin bag
+                                            <br>
+                                            <small class="ml-[23px]">10kg; 50cm x 40cm x 30cm</small>
+                                            <br>
+                                        </li>
+                                        <li class="my-4 list-disc list-inside">Reserved seat</li>
+                                    </ul>
+                                </div>
+                                <button data-fare-type="plus" class="p-4 bg-primary rounded-xl">
+                                    <p class="text-2xl font-bold leading-4 text-white">€{{ flight.plus_fare }}</p>
+                                    <p class="text-sm font-light text-white">per person</p>
+                                </button>
                             </div>
-                            <button data-fare-type="plus" class="p-4 bg-primary rounded-xl">
-                                <p class="text-2xl font-bold leading-4 text-white">€{{ flight.plus_fare }}</p>
-                                <p class="text-sm font-light text-white">per person</p>
-                            </button>
-                        </div>
-                        <!-- PREMIUM FARE -->
-                        <div class="flex flex-col justify-between h-full col-span-1 p-8 text-sm bg-white border-2 shadow-lg rounded-3xl md:text-md">
-                            <div>
-                                <p class="mb-4 text-xl font-bold md:mb-6 md:text-3xl text-primary">Premium</p>
-                                <ul class="leading-4">
-                                    <li class="my-4 list-disc list-inside">
-                                        Small carry-on item
-                                        <br>
-                                        <small class="ml-[23px]">40cm x 20cm x 20cm</small>
-                                        <br>
-                                        <small><a href="#"
+                            <!-- PREMIUM FARE -->
+                            <div class="flex flex-col justify-between h-full col-span-1 p-8 text-sm bg-white border-2 shadow-lg rounded-3xl md:text-md">
+                                <div>
+                                    <p class="mb-4 text-xl font-bold md:mb-6 md:text-3xl text-primary">Premium</p>
+                                    <ul class="leading-4">
+                                        <li class="my-4 list-disc list-inside">
+                                            Small carry-on item
+                                            <br>
+                                            <small class="ml-[23px]">40cm x 20cm x 20cm</small>
+                                            <br>
+                                            <small><a href="#"
    class="underline decoration-primary underline-offset-4 text-primary ml-[23px]">See baggage policy</a></small>
-                                    </li>
-                                    <li class="my-4 list-disc list-inside">20kg check-in bag</li>
-                                    <li class="my-4 list-disc list-inside">
-                                        Cabin bag
-                                        <br>
-                                        <small class="ml-[23px]">10kg; 50cm x 40cm x 30cm</small>
-                                        <br>
-                                    </li>
-                                    <li class="my-4 list-disc list-inside">Reserved seat</li>
-                                </ul>
+                                        </li>
+                                        <li class="my-4 list-disc list-inside">20kg check-in bag</li>
+                                        <li class="my-4 list-disc list-inside">
+                                            Cabin bag
+                                            <br>
+                                            <small class="ml-[23px]">10kg; 50cm x 40cm x 30cm</small>
+                                            <br>
+                                        </li>
+                                        <li class="my-4 list-disc list-inside">Reserved seat</li>
+                                    </ul>
+                                </div>
+                                <button data-fare-type="premium" class="p-4 bg-primary rounded-xl">
+                                    <p class="text-2xl font-bold leading-4 text-white">€{{ flight.premium_fare }}</p>
+                                    <p class="text-sm font-light text-white">per person</p>
+                                </button>
                             </div>
-                            <button data-fare-type="premium" class="p-4 bg-primary rounded-xl">
-                                <p class="text-2xl font-bold leading-4 text-white">€{{ flight.premium_fare }}</p>
-                                <p class="text-sm font-light text-white">per person</p>
-                            </button>
                         </div>
                     </div>
                 </div>
-            </div></div>
+            </div>
         {% endfor %}
     </div>
 </div>
