--- a/templates/partials/flights.html
+++ b/templates/partials/flights.html
@@ -75,7 +75,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <button data-fare-type="standard" class="p-4 bg-primary rounded-xl">
+                                <button data-leg="{{leg}}" data-fare-type="standard" class="p-4 bg-primary rounded-xl">
                                     <p class="text-2xl font-bold leading-4 text-white">€{{ flight.price }}</p>
                                     <p class="text-sm font-light text-white">per person</p>
                                 </button>
@@ -102,7 +102,7 @@
                                         <li class="my-4 list-disc list-inside">Reserved seat</li>
                                     </ul>
                                 </div>
-                                <button data-fare-type="plus" class="p-4 bg-primary rounded-xl">
+                                <button data-leg="{{leg}}" data-fare-type="plus" class="p-4 bg-primary rounded-xl">
                                     <p class="text-2xl font-bold leading-4 text-white">€{{ flight.plus_fare }}</p>
                                     <p class="text-sm font-light text-white">per person</p>
                                 </button>
@@ -130,7 +130,7 @@
                                         <li class="my-4 list-disc list-inside">Reserved seat</li>
                                     </ul>
                                 </div>
-                                <button data-fare-type="premium" class="p-4 bg-primary rounded-xl">
+                                <button data-leg="{{leg}}" data-fare-type="premium" class="p-4 bg-primary rounded-xl">
                                     <p class="text-2xl font-bold leading-4 text-white">€{{ flight.premium_fare }}</p>
                                     <p class="text-sm font-light text-white">per person</p>
                                 </button>
